--- a/src/views/layouts/auth-layout.ejs
+++ b/src/views/layouts/auth-layout.ejs
@@ -10,9 +10,8 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>SB Admin 2 - <%- title %></title>
+    <title>ME Tracker - <%- title %></title>
 
-    <!-- Custom fonts for this template-->
     <link
       href="/vendor/fontawesome-free/css/all.min.css"
       rel="stylesheet"
@@ -23,13 +22,11 @@
       rel="stylesheet"
     />
 
-    <!-- Custom styles for this template-->
     <link href="/css/sb-admin-2.min.css" rel="stylesheet" />
   </head>
 
   <body class="bg-gradient-primary">
     <div class="container">
-      <!-- Outer Row -->
       <div class="row justify-content-center">
         <div class="col-xl-10 col-lg-12 col-md-9">
           <div class="card o-hidden border-0 shadow-lg my-5">
@@ -38,14 +35,11 @@
         </div>
       </div>
     </div>
-    <!-- Bootstrap core JavaScript-->
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Core plugin JavaScript-->
     <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Custom scripts for all pages-->
     <script src="/js/sb-admin-2.min.js"></script>
   </body>
 </html>
