--- a/src/views/layouts/home-layout.ejs
+++ b/src/views/layouts/home-layout.ejs
@@ -9,10 +9,9 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <link rel="icon" type="image/png" href="/img/icon.png" />
+    <title>ME Tracker - <%- title %></title>
 
-    <title>SB Admin 2 - <%- title %></title>
-
-    <!-- Custom fonts for this template-->
     <link
       href="/vendor/fontawesome-free/css/all.min.css"
       rel="stylesheet"
@@ -23,33 +22,28 @@
       rel="stylesheet"
     />
 
-    <!-- Custom styles for this template-->
     <link href="/css/sb-admin-2.min.css" rel="stylesheet" />
   </head>
 
-  <body id="page-top">
-    <!-- Page Wrapper -->
+  <body id="page-top" class="sidebar-toggled">
     <div id="wrapper">
-      <!-- Sidebar -->
       <ul
-        class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
+        class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion toggled"
         id="accordionSidebar"
       >
-        <!-- Sidebar - Brand -->
         <a
           class="sidebar-brand d-flex align-items-center justify-content-center"
           href="/admin/dashboard"
         >
           <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-laugh-wink"></i>
+            <!-- <i class="fas fa-laugh-wink"></i> -->
+            <img src="/img/icon.png" width="50" height="50" />
           </div>
-          <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+          <div class="sidebar-brand-text mx-3">ME Tracker</div>
         </a>
 
-        <!-- Divider -->
         <hr class="sidebar-divider my-0" />
 
-        <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
           <a class="nav-link" href="/admin/dashboard">
             <i class="fas fa-fw fa-tachometer-alt"></i>
@@ -57,53 +51,19 @@
           >
         </li>
         <li class="nav-item">
-          <a
-            class="nav-link collapsed"
-            href="#"
-            data-toggle="collapse"
-            data-target="#collapseTwo"
-            aria-expanded="true"
-            aria-controls="collapseTwo"
-          >
-            <i class="fas fa-fw fa-cog"></i>
-            <span>Components</span>
-          </a>
-          <div
-            id="collapseTwo"
-            class="collapse"
-            aria-labelledby="headingTwo"
-            data-parent="#accordionSidebar"
-          >
-            <div class="bg-white py-2 collapse-inner rounded">
-              <a class="collapse-item" href="#">Buttons</a>
-              <a class="collapse-item" href="#">Cards</a>
-            </div>
-          </div>
-        </li>
-
-        <!-- Nav Item - Tables -->
-        <li class="nav-item">
           <a class="nav-link" href="/admin/transactions">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Transactions</span></a
           >
         </li>
-
-        <!-- Divider -->
+        <!-- 
         <hr class="sidebar-divider d-none d-md-block" />
-
-        <!-- Sidebar Toggler (Sidebar) -->
         <div class="text-center d-none d-md-inline">
           <button class="rounded-circle border-0" id="sidebarToggle"></button>
-        </div>
+        </div> -->
       </ul>
-      <!-- End of Sidebar -->
-
-      <!-- Content Wrapper -->
       <div id="content-wrapper" class="d-flex flex-column">
-        <!-- Main Content -->
         <div id="content">
-          <!-- Topbar -->
           <nav
             class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow"
           >
@@ -336,15 +296,8 @@
               </li>
             </ul>
           </nav>
-          <!-- End of Topbar -->
-
-          <!-- Begin Page Content -->
           <%- body %>
-          <!-- /.container-fluid -->
         </div>
-        <!-- End of Main Content -->
-
-        <!-- Footer -->
         <footer class="sticky-footer bg-white">
           <div class="container my-auto">
             <div class="copyright text-center my-auto">
@@ -352,18 +305,11 @@
             </div>
           </div>
         </footer>
-        <!-- End of Footer -->
       </div>
-      <!-- End of Content Wrapper -->
     </div>
-    <!-- End of Page Wrapper -->
-
-    <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
       <i class="fas fa-angle-up"></i>
     </a>
-
-    <!-- Logout Modal-->
     <div
       class="modal fade"
       id="logoutModal"
@@ -402,7 +348,6 @@
       </div>
     </div>
 
-    <!-- Enter Amount Modal-->
     <div
       class="modal fade"
       id="enterAmountModal"
@@ -482,7 +427,6 @@
       </div>
     </div>
 
-    <!-- Update Amount Modal-->
     <div
       class="modal fade"
       id="updateAmountModal"
@@ -562,14 +506,11 @@
         </div>
       </div>
     </div>
-    <!-- Bootstrap core JavaScript-->
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Core plugin JavaScript-->
     <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Custom scripts for all pages-->
     <script src="/js/sb-admin-2.min.js"></script>
     <script>
       const todaysDate = "<%= data.todaysDate %>";
